src/datepicker.css
.hdp-outer-container {
    width: 100%;
    height: 100%;
    min-width: 375px;
    overflow: hidden;
}
.hdp-inner-container {
    position: relative;
    height: calc(
        var(--hdp-month-name-cell-height) + var(--hdp-week-day-cell-height) + var(--hdp-date-cell-height) * 6
    );
    touch-action: none;
}
.hdp-month-box {
    position: absolute;
    top: 0;
    left: 0;
    display: grid;
    width: var(--hdp-month-box-width);
}
.hdp-month-name-cell,
.hdp-date-cell,
.hdp-week-day-cell {
    display: flex;
    align-items: center;
    justify-content: center;
}
.hdp-month-name-cell {
    grid-column: 1/8;
    height: var(--hdp-month-name-cell-height);
}
.hdp-week-day-cell {
    align-items: flex-end;
    height: var(--hdp-week-day-cell-height);
}
.hdp-date-cell {
    border: none;
    padding: 0;
    height: var(--hdp-date-cell-height);
    outline: none;
}

